# lotara

./: README.md
AI/: .env.example  .gitignore  .vercelignore  README.md  TEAM_ONBOARDING.md  demo.py  main.py  pyproject.toml  requirements.txt  test_backend_input.json  test_json_input.py  test_retry_config.py  vercel.json  zbpack.json
AI/Phuc/: test_cloud.py
AI/api/: index.py
AI/services/backend/: .env.example  Dockerfile  IMPORT_FIX.md  INTEGRATION.md  QUICKSTART.md  RATE_LIMIT_FIX.md  README.md  START_SERVER.md  SUMMARY.md  VERCEL_DEPLOYMENT.md  __init__.py  client_example.py  client_example_streaming.py  docker-compose.yml  main.py  pyproject.toml  requirements-vercel.txt  requirements.txt  run.py  run_local.py  test_api.py  vercel.json
AI/services/backend/api/: __init__.py  app.py  index.py  kv_client.py  models.py  orchestrator.py  repositories.py  worker.py
AI/services/backend/api/middleware/: rate_limiter.py
AI/services/backend/api/models/: __init__.py  requests.py  responses.py
AI/services/backend/api/routes/: __init__.py  health.py  itinerary.py
AI/services/backend/api/validators/: __init__.py  itinerary_validator.py
AI/services/backend/core/: __init__.py  job_manager.py  job_manager_simplified.py  workflow_executor.py
AI/services/backend/scheduler/: __init__.py  proactive_scheduler.py
AI/services/backend/tests/: __init__.py  test_api.py
AI/services/tests/: test_api.py
AI/src/travel_lotara/: __init__.py  agent.py  main.py
AI/src/travel_lotara/agents/: __init__.py  base_agent.py  prompt.py  prompt_manager.py  root_agent.py  tracing_config.py
AI/src/travel_lotara/agents/callbacks/: __init__.py  callbacks.py
AI/src/travel_lotara/agents/profiles/: itinerary_empty_default.json  itinerary_example_default.json
AI/src/travel_lotara/agents/shared_libraries/: __init__.py  constants.py  types.py
AI/src/travel_lotara/agents/sub_agents/: __init__.py  planning_formatter_agent.py
AI/src/travel_lotara/agents/sub_agents/formatter_agent/: __init__.py  formatter_agent.py  prompt.py
AI/src/travel_lotara/agents/sub_agents/inspiration_agent/: __init__.py  inspiration_agent.py  prompt.py
AI/src/travel_lotara/agents/sub_agents/planning_agent/: __init__.py  planning_agent.py  prompt.py
AI/src/travel_lotara/agents/sub_agents/pre_agent/: __init__.py  pre_agent.py  prompt.py
AI/src/travel_lotara/agents/sub_agents/pre_trip_agent/: __init__.py  pretrip_agent.py  prompt.py
AI/src/travel_lotara/config/: __init__.py  logging_config.py  production_settings.py  settings.py
AI/src/travel_lotara/core/: __init__.py  input_parser.py  parser.py  state_manager.py
AI/src/travel_lotara/core/contracts/: __init__.py  final_responses.py
AI/src/travel_lotara/core/eval/: README.md  __init__.py  auto_evaluator.py  comprehensive_metrics.py  experiments.py  inline_evaluation.py  judges.py  opik_evaluators.py  opik_showcase.py  stateful_evaluator.py
AI/src/travel_lotara/data/: __init__.py  fixtures.py
AI/src/travel_lotara/database/: __init__.py  client.py  intro.md  models.py  repositories.py  test_connection.py
AI/src/travel_lotara/database/migrations/: 001_initial_schema.sql  README.md  __init__.py
AI/src/travel_lotara/database/repositories/: __init__.py  destination_repo.py  itinerary_repo.py  pretrip_repo.py
AI/src/travel_lotara/guardrails/: __init__.py  callbacks.py  output_enforcer.py
AI/src/travel_lotara/guardrails/features/: __init__.py  input_intent_validation.py  tool_argument_check.py
AI/src/travel_lotara/guardrails/non_use/data_guard/: __init__.py  data_guard.py
AI/src/travel_lotara/guardrails/non_use/intent_guard/: __init__.py  intent_guard.py
AI/src/travel_lotara/guardrails/non_use/planning_guard/: __init__.py  planning_guard.py
AI/src/travel_lotara/guardrails/non_use/response_guard/: __init__.py  response_guard.py
AI/src/travel_lotara/tests/deepeval/: __init__.py
AI/src/travel_lotara/tools/: __init__.py  adk_memory.py  base_tool.py  calendar_tool.py  travel_tools.py
AI/src/travel_lotara/tools/context_tools/: __init__.py  calendar_tool.py  date_season_tool.py  user_profile_tool.py
AI/src/travel_lotara/tools/shared_tools/: __init__.py  adk_memory.py  milvus_engine.py  milvus_retrieval_tool.py  rag_engine.py  search.py  setup_milvus.py  travel_tools.py
AI/src/travel_lotara/tracking/: README.md  __init__.py  opik_tracer.py  progress_tracker.py  tracing_examples.py
AI/tests/: demo_eval.py  demo_full.py  demo_opik_evaluations.py  eval_test_dataset.py  evaluate_live_agent.py  example_inline_evaluation.py  example_nested_image_urls.py  manual_eval.py  reingest_with_image_urls.py  reset_milvus_collection.py  test_fastapi_integration.py  test_itinerary_validation.py  test_simple.py
backend/: .env.example  (+5 more)
(+87 files in other folders)
