[project]
name = "lotara-ai-backend"
version = "1.0.0"
description = "Serverless AI backend for Travel Lotara - autonomous multi-agent travel concierge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "supabase>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
]

[project.scripts]
app = "api.app:app"

[tool.vercel.scripts]
# Optional: Run before deployment
# build = "python scripts/prebuild.py"
